Added note about paper session.

--- a/_guidelines/5-neurips-19.html
+++ b/_guidelines/5-neurips-19.html
@@ -28,5 +28,11 @@ title: Presenter Guidelines for EMC2 at NeurIPS'19
 	<li>Posters should follow a similar format to other NeurIPS posters, but please note no template will be provided.</li>
 	<li>Examples may be found on the NeurIPS 2019 poster schedule: <a href="https://neurips.cc/Conferences/2019/Schedule?type=Poster" target="_blank">https://neurips.cc/Conferences/2019/Schedule?type=Poster</a></li>
     <li>Due to time constraints, there will be no formal time set aside for posters during the program but we ask authors to stand by their posters during the breaks to discuss their work with workshop attendees.</li>
-    <li>We expect space in the room to be limited so posters will be split into a morning and afternoon session.</li>
+	<li>We expect space in the room to be limited so posters will be split into a morning and afternoon session.</li>
+	<li>
+		If your paper was assigned to paper or poster session #1 your poster will be on display in the morning (AM).
+	</li>
+	<li>
+		If your paper was assigned to paper or poster session #2 your poster will be on display in the afternoon (PM).
+	</li>
 </ul>
