--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -6,7 +6,7 @@ colocated_long: 33rd Conference on Neural Information Processing Systems
 colocated_url: https://nips.cc/Conferences/2019
 event_date: 2019-12-13
 event_location: Vancouver BC, Canada
-event_room: TBD
+event_room: West 306
 event_session: full
 is_upcoming: True
 is_accepting_submission: False
