--- a/_guidelines/5-neurips-19.html
+++ b/_guidelines/5-neurips-19.html
@@ -13,7 +13,7 @@ title: Presenter Guidelines for EMC2 at NeurIPS'19
 	<li>6 slide maximum (including title slide)</li>
 	<li>Title slide must include title of paper, author names and affiliations.</li>
 	<li>Please include <em>EMC2 Workshop @ NeurIPS 2019</em> on the title slide.</li>
-	<li>Please provide original PowerPoint (PPT) file to organizers by <strong>December 11</strong></li>
+	<li>Please provide original PowerPoint (PPT) file (name <strong>&lt;Lastname&gt;_OralPresentation.pptx</strong>) to organizers by <strong>December 9th</strong>.</li>
 	<li>All presentation slides will be merged and projected from a workshop provided laptop.</li>
 	<li>Due to time constraints Q&A will be extremely limited.</li>
 </ul>
@@ -34,5 +34,8 @@ title: Presenter Guidelines for EMC2 at NeurIPS'19
 	</li>
 	<li>
 		If your paper was assigned to paper or poster session #2 your poster will be on display in the afternoon (PM).
+	</li>
+	<li>
+		Please provide a PDF or PPT copy of your poster (name <strong>&lt;Lastname&gt;_Poster.pdf</strong>) to the organizers by <strong>December 9th</strong>.
 	</li>
 </ul>
