--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -8,9 +8,9 @@ event_date: 2019-12-13
 event_location: Vancouver BC, Canada
 event_room: West 306
 event_session: full
-is_upcoming: True
+is_upcoming: False
 is_accepting_submission: False
-show_on_submission_page: True
+show_on_submission_page: False
 show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc22
 submission_deadline: 2019-09-16
