Uploaded a few more presetnations from NeurIPS and added links to recordings.

--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -29,3 +29,13 @@ sponsors:
       logo: cadence.jpg
       url: https://www.cadence.com
 ---
+<blockquote class="z-depth-1" style="text-align: left;">
+  <p style="padding: 1rem;">
+      Live recodings from the workshop are available on-line via SlidesLive:
+       <a href="https://slideslive.com/38921950/emc2-energy-efficient-machine-learning-and-cognitive-computing-5th-edition-1" target="_blank">Part 1</a>,
+       <a href="https://slideslive.com/38921951/emc2-energy-efficient-machine-learning-and-cognitive-computing-5th-edition-2" target="_blank">Part 2</a>,
+       <a href="https://slideslive.com/38921952/emc2-energy-efficient-machine-learning-and-cognitive-computing-5th-edition-3" target="_blank">Part 3</a> and
+       <a href="https://slideslive.com/38921953/emc2-energy-efficient-machine-learning-and-cognitive-computing-5th-edition-4" target="_blank">Part 4</a>.
+
+  </p>
+</blockquote>
