--- a/submission.html
+++ b/submission.html
@@ -9,20 +9,7 @@ show_note: True
 <h3 class="header">Submit to the Workshop</h3>
 
 {% if page.show_note %}
-<div class="row">
-    <div class="col s12">
-        <blockquote class="z-depth-1">
-            <p style="padding: 1rem;">
-                <strong>Important Update:</strong> If your paper/poster was accepted to the <a href="neurips-19">NeurIPS'19</a> edition of EMC2 and you have not been selected in the
-                <a href="https://nips.cc/Lottery/">ticket lottery</a> you are qualified to recieve 1 (one) ticket from the EMC2 organizing committee to attend and present your work.
-            </p>
-            <p style="padding: 1rem;">
-                Please notify the submission chairs Satyam Srivastava (satyam.srivastava@intel.com) and Tao Sheng (tsheng@amazon.com) if someone other than the first author will be
-                presenting as soon as possible.
-            </p>
-        </blockquote>
-    </div>
-</div>
+    {% include submission-notes.html %}
 {% endif %}
 
 <div class="row">
@@ -71,18 +58,6 @@ show_note: True
                     <td>Camera Ready</td>
                     {% for ed in upcoming_editions %}
                     <td>{{ ed.submission_camera_ready|date: "%B %d, %Y" }}</td>
-                    {% endfor %}
-                </tr>
-                <tr>
-                    <td>EMCC Registration Deadline</td>
-                    {% for ed in upcoming_editions %}
-                        <td>
-                            {% if ed.has_emcc_submission %}
-                                <strong>{{ ed.emcc_registration_deadline|date: "%B %d, %Y" }}  (23:59 PST)</strong>
-                            {% else %}
-                                N/A
-                            {% endif %}
-                        </td>
                     {% endfor %}
                 </tr>
                 <tr>
