Updated summary CFP for the EMCC and added it to the front page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ permalink: /index
 {% endif %}
 
 {% include cfp.html hide_cfp=true %}
-</div>
+
+{% include emcc.html %}
 
 <div class="row">
   <h3 class="header">Recent Editions</h3>
