--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ permalink: /index
 <div class="row">
   <h3 class="header"><i class="material-icons">announcement</i> Important Announcements</h3>
   <blockquote class="z-depth-1">
+	<p style="padding: 1rem;">
+      <strong><a href="/submission">Call for Proposal announced for EMC2 6th Edition</a>:</strong> To make the
+	  EMC<sup>2</sup> Workshop more accessible to the community, we are transitioning to a virtual format
+	  this year. 6th Edition will be an independent virtual online event on <em>December 5, 2020</em>.
+	  For further details and logistics, please look out our Call for Proposal and keep checking our website
+    </p>
     <p style="padding: 1rem;">
       <strong><a href="/emcc">EMC2 Model Compression Challenge</a>:</strong> We are pleased to announce the first
       EMC<sup>2</sup> Model Compression Challenge (EMCC) which aims to identify the best ideas and approaches for deep
