--- a/submission.html
+++ b/submission.html
@@ -127,7 +127,7 @@ show_note: True
 
             {% if ed.has_emcc_submission %}
             <a class="waves-effect waves-light btn-large center-align"
-                href="/submission-emcc" target="_blank">
+                href="/emcc" target="_blank">
                 Submit to EMC<sup>2</sup> ({{ ed.colocated_short}}) Model Compression Challenge
                 <i class="material-icons right">cloud_upload</i>
             </a>
