--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -1,14 +1,14 @@
 ---
 permalink: /virtual-20
 edition: virtual-20
-colocated_short: EMC2 Virutal Workshop 2020
+colocated_short: EMC2 Online Workshop 2020
 <! -- colocated_long: 33rd Conference on Neural Information Processing Systems -->
 <! -- colocated_url: https://nips.cc/Conferences/2019 -->
 event_date: 2020-12-05
-event_location: Virtual (San Jose, California)
-event_room: Microsoft Teams Online Meeting
+event_location: Online (from San Jose, California)
+event_room: Microsoft Teams Online Meet
 event_session: full
-is_upcoming: False
+is_upcoming: false
 is_accepting_submission: True
 show_on_submission_page: True
 show_program_summary: True
@@ -21,22 +21,5 @@ submission_camera_ready: 2020-11-23
 has_emcc_submission: True
 emcc_submission_deadline: 2020-11-15
 emcc_registration_deadline: 2019-11-08
-sponsors:
-    - name: Qualcomm
-      logo: qualcomm.jpg
-      url: https://www.qualcomm.com
-    - name: Cadence
-      logo: cadence.jpg
-      url: https://www.cadence.com
 ---
-<blockquote class="z-depth-1" style="text-align: left;">
-  <p style="padding: 1rem;">
-      Live recodings from the workshop are available on-line via SlidesLive:
-       <a href="https://slideslive.com/38921950/emc2-energy-efficient-machine-learning-and-cognitive-computing-6th-edition-1" target="_blank">Part 1</a>,
-       <a href="https://slideslive.com/38921951/emc2-energy-efficient-machine-learning-and-cognitive-computing-6th-edition-2" target="_blank">Part 2</a>,
-       <a href="https://slideslive.com/38921952/emc2-energy-efficient-machine-learning-and-cognitive-computing-6th-edition-3" target="_blank">Part 3</a> and
-       <a href="https://slideslive.com/38921953/emc2-energy-efficient-machine-learning-and-cognitive-computing-6th-edition-4" target="_blank">Part 4</a>.
-       <a href="https://slideslive.com/38921953/emc2-energy-efficient-machine-learning-and-cognitive-computing-6th-edition-5" target="_blank">Part 5</a>.
 
-  </p>
-</blockquote>
