removed 6th edition from previous editions

--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -8,7 +8,8 @@ event_date: 2020-12-05
 event_location: Online (from San Jose, California)
 event_room: Microsoft Teams Online Meet
 event_session: full
-is_upcoming: false
+is_upcoming: True
+is_online: True
 is_accepting_submission: True
 show_on_submission_page: True
 show_program_summary: True
