submission acceptance updated to Nov 9

--- a/submission.html
+++ b/submission.html
@@ -49,7 +49,7 @@ show_note: True
                         <strong style="color: red;">{{ ed.submission_acceptance_extended|date: "%B %d, %Y" }} (23:59 PST)</strong>
                         <span style="text-decoration: line-through;">{{ ed.submission_acceptance|date: "%B %d, %Y" }} (23:59 PST)</span>
                         {% else %}
-                        <strong>{{ ed.submission_deadline|date: "%B %d, %Y" }} (23:59 PST)</strong>
+                        <strong>{{ ed.submission_acceptance|date: "%B %d, %Y" }} (23:59 PST)</strong>
                         {% endif %}
                     </td>
                     {% endfor %}
