author style file from NeurIPS 2019 directly linked

--- a/submission.html
+++ b/submission.html
@@ -96,12 +96,12 @@ show_note: True
                     cognitive computing, reflect on trends in the community, or present anything interesting and worth
                     exploring as a direction.</li>
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-                <li>Papers <em>MUST</em> use the formatting guidelines for the co-located conference of EMC2:</li>
-                    <ul class="browser-default">
+                <li>Papers <em>MUST</em> use the formatting guidelines and style files from here: <a href="https://neurips.cc/Conferences/2019/PaperInformation/StyleFiles">author_response.sty</a></li>
+                    <!-- ul class="browser-default">
                         <li><strong>ACM SIGPLAN</strong> <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
                         <li><strong>IEEE</strong> conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
                         <li><strong>NeurIPS</strong> conference <a href="https://nips.cc/Conferences/2019/CallForPapers">formatting guidelines</a></li>
-                    </ul>
+                    </ul-->
                 </li>
                 <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
                 <li>Text must be in no smaller than 10pt font size.</li>
