added 'latex 2e' to style file link

--- a/submission.html
+++ b/submission.html
@@ -96,7 +96,7 @@ show_note: True
                     cognitive computing, reflect on trends in the community, or present anything interesting and worth
                     exploring as a direction.</li>
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-                <li>Papers <em>MUST</em> use the formatting guidelines and style files from here: <a href="https://neurips.cc/Conferences/2019/PaperInformation/StyleFiles">author_response.sty</a></li>
+                <li>Papers <em>MUST</em> use the formatting guidelines and Latex 2e style files from here: <a href="https://neurips.cc/Conferences/2019/PaperInformation/StyleFiles">author_response.sty</a></li>
                     <!-- ul class="browser-default">
                         <li><strong>ACM SIGPLAN</strong> <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
                         <li><strong>IEEE</strong> conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
