updated  organizing committee members

--- a/program-committee.html
+++ b/program-committee.html
@@ -87,9 +87,7 @@ reviewers:
         </ul>
         <h4 class="header">Publicity and Outreach</h4>
         <ul class="browser-default">
-            <li>Debu Pal, Cadence</li>
-            <li>Mahdi Bojnordi, University of Utah</li>
-            <li>Krishna Nagar, Intel</li>
+            <li>All</li>
         </ul>
     </div>
     <div class="col s12 m6">
@@ -101,7 +99,7 @@ reviewers:
         <h4 class="header">Publication</h4>
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
-            <li>Sushant Kondguli, Samsung (s.kondguli@samsung.com)</li>
+            <li>Kushal Datta, NVIDIA (kdatta@nvidia.com)</li>
         </ul>
     </div>
 </div>
