updated submission page with new style file

--- a/submission.html
+++ b/submission.html
@@ -96,7 +96,7 @@ show_note: True
                     cognitive computing, reflect on trends in the community, or present anything interesting and worth
                     exploring as a direction.</li>
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-                <li>Papers <em>MUST</em> use the double column formatting guidelines from here: <a href="https://www.acm.org/publications/acm-latex-style-guide-3jan2017">ACM Double Column Format</a></li>
+                <li>Papers <em>MUST</em> use the double column formatting guidelines and style file provided here: <a href="assets/latex_files/emc2_2020.sty">EMC2 Double Column Format</a></li>
                     <!-- ul class="browser-default">
                         <li><strong>ACM SIGPLAN</strong> <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
                         <li><strong>IEEE</strong> conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
