changed online to virtual

--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -1,11 +1,11 @@
 ---
 permalink: /virtual-20
 edition: virtual-20
-colocated_short: EMC2 Online Workshop 2020
+colocated_short: EMC2 Virtual Workshop 2020
 <! -- colocated_long: 33rd Conference on Neural Information Processing Systems -->
 <! -- colocated_url: https://nips.cc/Conferences/2019 -->
 event_date: 2020-12-05
-event_location: Online (from San Jose, California)
+event_location: Virtual (from San Jose, California)
 event_room: Microsoft Teams Online Meet
 event_session: full
 is_upcoming: True
