--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ permalink: /index
 	<p style="padding: 1rem;">
       <strong><a href="/submission">Call for Proposal announced for EMC2 6th Edition</a>:</strong> To make the
 	  EMC<sup>2</sup> Workshop more accessible to the community, we are transitioning to a virtual format
-	  this year. 6th Edition will be an independent virtual online event on <em>December 5, 2020</em>.
+	  this year. 6th Edition will be an independent virtual event on <em>December 5, 2020</em>.
 	  For further details and logistics, please look out our Call for Proposal and keep checking our website
     </p>
     <p style="padding: 1rem;">
