--- a/registration.html
+++ b/registration.html
@@ -5,5 +5,5 @@ permalink: /registration
 
 <h3 class="header">Workshop Registration</h3>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe-Bm7Bi5QnabOh0OWSDg8_kd3MvJRCb6GhrvTbHTdu-Qm2Aw/viewform?embedded=true"
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczk71q8rx9lFJVHxgwEMF6mB3qr5NNwhcl8L_G-XIjBSAtPA/viewform"
 width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
