--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -11,6 +11,7 @@ event_session: full
 is_upcoming: True
 is_online: True
 is_accepting_submission: True
+is_registering: True
 show_on_submission_page: True
 show_program_summary: True
 submission_url: https://easychair.org/conferences/?conf=emc23
