Program committee update

--- a/program-committee.html
+++ b/program-committee.html
@@ -56,6 +56,10 @@ reviewers:
       affiliation: Intel
     - name:  Andre Xian	Ming Chang
       affiliation: Purdue University
+    - name: Ananya Pareek
+      affiliation: Apple
+    - name: Nitin Garegrat
+      affiliation: Microsoft
     - name: Sylvain Flamant
       affiliation: Wave computing
     - name: Rosario	Cammarota
