Program committee and sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -7,7 +7,7 @@ show_note: True
 {% assign upcoming_editions = site.editions|where: "show_on_submission_page",true|sort:"event_date" %}
 
 <h3 class="header">Sponsors for 6th Edition EMCC</h3>
-
+<li>For sponsorship queries, please contact rapariha@microsoft.com
 {% if page.show_note %}
     {% include submission-notes.html %}
 {% endif %}
