--- a/program-committee.html
+++ b/program-committee.html
@@ -81,6 +81,7 @@ reviewers:
     - name: Danian Gong
       affiliation: Cadence
 ---
+<!--
 <h3 class="header">Program Committee</h3>
 <div class="row">
     <div class="col s12 m6">
@@ -107,6 +108,7 @@ reviewers:
         </ul>
     </div>
 </div>
+-->
 
 <h3 class="header">Review Committee</h3>
 <div class="row">
@@ -119,7 +121,7 @@ reviewers:
     </div>
 </div>
 
-<h3 class="header">About the Organizers</h3>
+<h3 class="header">Organizing Committee</h3>
 {% for o in site.organizers %}
 <div class="row">
     <div class="col s12">
