--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -18,6 +18,7 @@ submission_url: https://easychair.org/conferences/?conf=emc23
 submission_deadline: 2020-10-15
 submission_deadline_extended: 2020-11-01
 submission_acceptance: 2020-11-09
+submission_acceptance_extended: 2020-11-16
 
 <! -- submission_acceptance_extended: 2019-10-01 -->
 submission_camera_ready: 2020-11-23
