updated how to attend and index page

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@ permalink: /index
 <div class="row">
   <h3 class="header"><i class="material-icons">announcement</i> Important Announcements</h3>
   <blockquote class="z-depth-1">
-	<p style="padding: 1rem;">
+	<!--p style="padding: 1rem;">
       <strong><a href="/submission">Call for Proposal announced for EMC2 6th Edition</a>:</strong> To make the
 	  EMC<sup>2</sup> Workshop more accessible to the community, we are transitioning to a virtual format
 	  this year. 6th Edition will be an independent virtual event on <em>December 5, 2020</em>.
 	  For further details and logistics, please look out our Call for Proposal and keep checking our website
-    </p>
-    <p style="padding: 1rem;">
+    </p-->
+    <!--p style="padding: 1rem;">
       <strong><a href="/emcc">EMC2 Model Compression Challenge</a>:</strong> We are pleased to announce the first
       EMC<sup>2</sup> Model Compression Challenge (EMCC) which aims to identify the best ideas and approaches for deep
       learning model compression. Check <a href="/emcc">this page</a> for more details.
+    </p-->
+    <p style="padding: 1rem;">
+      <strong><a href="/virtual-20">How To Attend Virtual EMC<sup>2</sup> 2020</a>:</strong> We will
+      be using Microsoft Teams to coordinate between keynote and invited speakers, panel, paper
+      presentations and most importantly you, our attendees. Details on how to attend coming soon.
     </p>
   </blockquote>
 </div>
