--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -10,7 +10,7 @@ event_room: Microsoft Teams Online Meet
 event_session: full
 is_upcoming: True
 is_online: True
-is_accepting_submission: True
+is_accepting_submission: False
 is_registering: True
 show_on_submission_page: True
 show_program_summary: True
