--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ permalink: /index
     </p-->
     <p style="padding: 1rem;">
       <strong><a href="/virtual-20">How To Attend Virtual EMC<sup>2</sup> 2020</a>:</strong> We will
-      be using Microsoft Teams to coordinate between keynote and invited speakers, panel, paper
-      presentations and most importantly you, our attendees. Details on how to attend coming soon.
+      be using Microsoft Teams to coordinate between keynote and invited speakers, panel and paper
+      presentations. All events will be streamed live on <strong><a href="https://nam06.safelinks.protection.outlook.com/?url=https%3A%2F%2Fyoutu.be%2FGmxh9QgA9Hc&data=04%7C01%7Crapariha%40microsoft.com%7C5a3c1c0d749a459cf01608d896931124%7C72f988bf86f141af91ab2d7cd011db47%7C1%7C1%7C637424905673305801%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=Ez1FBoWWpkWjr6c7cF3k%2FGgcSaeHp7ZwutNRqV4mB88%3D&reserved=0">YouTube</a></strong>
     </p>
   </blockquote>
 </div>
