Cleanup announcements for virtual-20 and add speaker names to welcom/close.

--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -6,7 +6,7 @@ colocated_short: EMC2 Virtual Workshop 2020
 <! -- colocated_url: https://nips.cc/Conferences/2019 -->
 event_date: 2020-12-05
 event_location: Virtual (from San Jose, California)
-event_room: Microsoft Teams Online Meet
+event_room: Virtual
 event_session: full
 is_upcoming: True
 is_online: True
@@ -27,3 +27,11 @@ emcc_submission_deadline: 2020-11-15
 emcc_registration_deadline: 2019-11-08
 ---
 
+<blockquote class="z-depth-1" style="text-align: left;">
+    <p style="padding: 1rem;">
+        <strong><a href="/virtual-20">How To Attend Virtual EMC<sup>2</sup> 2020</a>:</strong> All sessions
+        will be streamed live on <strong><a href="https://www.youtube.com/watch?v=Gmxh9QgA9Hc">YouTube</a></strong>
+        <br/>
+        If you have previously registered for interactive attendance a link to the Microsoft Teams meeting has been sent to your email. 
+    </p>
+</blockquote>
