--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -1,29 +1,29 @@
 ---
-permalink: /virtual-20
-edition: virtual-20
-colocated_short: EMC2 Virtual Workshop 2020
+permalink: /virtual-21
+edition: virtual-21
+colocated_short: EMC2 Virtual Workshop 2021
 <! -- colocated_long: 33rd Conference on Neural Information Processing Systems -->
 <! -- colocated_url: https://nips.cc/Conferences/2019 -->
-event_date: 2020-12-05
+event_date: 2021-08-07
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
 event_session: full
-is_upcoming: False
+is_upcoming: True
 is_online: True
 is_accepting_submission: False
 is_registering: False
-show_on_submission_page: False
-show_program_summary: False
+show_on_submission_page: True
+show_program_summary: True
 submission_url: https://easychair.org/conferences/?conf=emc23
-submission_deadline: 2020-10-15
-submission_deadline_extended: 2020-11-01
-submission_acceptance: 2020-11-09
-submission_acceptance_extended: 2020-11-16
+submission_deadline: 2021-06-15
+submission_deadline_extended: 2021-06-15
+submission_acceptance: 2021-07-01
+submission_acceptance_extended: 2020-07-01
 
 <! -- submission_acceptance_extended: 2019-10-01 -->
-submission_camera_ready: 2020-11-23
+submission_camera_ready: 2021-08-01
 has_emcc_submission: True
-emcc_submission_deadline: 2020-11-15
+emcc_submission_deadline: 2021-07-15
 emcc_registration_deadline: 2019-11-08
 ---
 <!--
