--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -11,7 +11,7 @@ is_online: True
 is_accepting_submission: False
 is_registering: False
 show_on_submission_page: True
-show_program_summary: True
+show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc23
 submission_deadline: 2021-06-15
 submission_acceptance: 2021-07-01
