--- a/registration.html
+++ b/registration.html
@@ -5,5 +5,18 @@ permalink: /registration
 
 <h3 class="header">Workshop Registration</h3>
 
+{% assign upcoming_editions = site.editions|where: "is_upcoming",true|sort:"event_date" %}
+
+{% if upcoming_editions.size > 0 %}
+
+{% assign next_upcoming_edition = upcoming_editions|first %}
+{% if next_upcoming_edition.is_registering %}
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczk71q8rx9lFJVHxgwEMF6mB3qr5NNwhcl8L_G-XIjBSAtPA/viewform"
-width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+{% else %}
+Registration is currently closed.
+{% endif %}
+
+{% else %}
+Registration is currently closed.
+{% endif %}
