Fix co-located links for virtual editions.

--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -2,8 +2,7 @@
 permalink: /virtual-20
 edition: virtual-20
 colocated_short: EMC2 Virtual Workshop 2020
-<! -- colocated_long: 33rd Conference on Neural Information Processing Systems -->
-<! -- colocated_url: https://nips.cc/Conferences/2019 -->
+colocated_url: /virtual-20
 event_date: 2020-12-05
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
