--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -2,6 +2,7 @@
 permalink: /virtual-21
 edition: virtual-21
 colocated_short: EMC2 Virtual Workshop 2021
+colocated_url: /virtual-21
 event_date: 2021-08-07
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
