--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ permalink: /index
 		{% else %}
 		<a href="{{ ed.url }}">{% include ordinal.html number=edition_number %} Edition</a> on
         {{ ed.event_date|date: "%B %d, %Y" }} in {{ ed.event_location }}
-        <a href="/virtual-20" target="_blank"><span
+        <a href="{{ ed.colocated_url }}" target="_blank"><span
             style="white-space: nowrap;">{{ ed.colocated_short }}</span></a>
 		{% endif %}
         {% if ed.is_accepting_submission %}
