Cleanup how we handle colocated vs non colocated workshops.

--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -3,6 +3,7 @@ permalink: /virtual-20
 edition: virtual-20
 colocated_short: EMC2 Virtual Workshop 2020
 colocated_url: /virtual-20
+colocated_self: True
 event_date: 2020-12-05
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
