--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -11,7 +11,7 @@ event_session: full
 is_upcoming: True
 is_online: True
 is_accepting_submission: False
-is_registering: False
+is_registering: True 
 show_on_submission_page: True
 show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc23
