--- a/registration.html
+++ b/registration.html
@@ -11,8 +11,8 @@ permalink: /registration
 
 {% assign next_upcoming_edition = upcoming_editions|first %}
 {% if next_upcoming_edition.is_registering %}
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczk71q8rx9lFJVHxgwEMF6mB3qr5NNwhcl8L_G-XIjBSAtPA/viewform"
-    width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczk71q8rx9lFJVHxgwEMF6mB3qr5NNwhcl8L_G-XIjBSAtPA/viewform" width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>//-->
+<iframe src="https://docs.google.com/forms/d/10AwSGdjjTC0FSA92mVgcM61JmWmr9Wy9E_fIBDkaThw/" width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 {% else %}
 Registration is currently closed.
 {% endif %}
