updated youtube link to EMC2 Energy Efficient ML and Cognitive Computing channel

--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -26,7 +26,7 @@ emcc_registration_deadline: 2019-11-08
 <blockquote class="z-depth-1" style="text-align: left;">
     <p style="padding: 1rem;">
         <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
-        will be streamed live on <strong><a href="https://www.youtube.com/">YouTube</a></strong>
+        will be streamed live on <strong><a href="https://www.youtube.com/channel/UCTwsyUtTOJg-vADmOmbczhw/">YouTube</a></strong>
         <br/>
         If you register for interactive attendance a link to the Microsoft Teams meeting will sent to your email. 
     </p>
