updated kushal's affiliation

--- a/program-committee.html
+++ b/program-committee.html
@@ -53,7 +53,7 @@ reviewers:
     - name:  Keshari Rishabh
       affiliation: Intel
     - name: Kushal	Datta
-      affiliation: Intel
+      affiliation: Nvidia
     - name:  Andre Xian	Ming Chang
       affiliation: Purdue University
     - name: Ananya Pareek
