added proceedings links for previous editions; added youtube link for 6th edition; added 7th edition sponsors

--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -12,4 +12,9 @@ is_upcoming: False
 show_program_summary: False
 is_accepting_submission: False
 show_on_submission_page: False
+
+has_proceedings: True
+proceedings_url: https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fieeexplore.ieee.org%2Fxpl%2Fconhome%2F9022708%2Fproceeding&data=04%7C01%7Ckdatta%40nvidia.com%7Cfd280f76217440ec03ef08d968dcdef7%7C43083d15727340c1b7db39efd9ccc17a%7C0%7C0%7C637656121192684179%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C2000&sdata=rH4BB6uUeI27xVz%2FvTLz5Daijrq0342krLgXFYG%2BYTs%3D&reserved=0
+proceedings_venue: IEEE Xplore
+
 ---
