--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -17,4 +17,9 @@ submission_deadline: 2019-05-27
 submission_deadline_extended: 2019-06-03
 submission_acceptance: 2019-06-10
 submission_camera_ready: 2019-06-17
+
+has_proceedings: True
+proceedings_url: https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fieeexplore.ieee.org%2Fxpl%2Fconhome%2F9022708%2Fproceeding&data=04%7C01%7Ckdatta%40nvidia.com%7Cfd280f76217440ec03ef08d968dcdef7%7C43083d15727340c1b7db39efd9ccc17a%7C0%7C0%7C637656121192694141%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C2000&sdata=EzolqbNQIXN%2BL5Evew27XqawIG%2FkR4x331qjhjps1xk%3D&reserved=0
+proceedings_venue: IEEE Xplore
+
 ---
