--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -28,6 +28,11 @@ sponsors:
     - name: Cadence
       logo: cadence.jpg
       url: https://www.cadence.com
+
+has_proceedings: True
+proceedings_url: https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fieeexplore.ieee.org%2Fxpl%2Fconhome%2F9463408%2Fproceeding&data=04%7C01%7Ckdatta%40nvidia.com%7Cfd280f76217440ec03ef08d968dcdef7%7C43083d15727340c1b7db39efd9ccc17a%7C0%7C0%7C637656121192694141%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C2000&sdata=XMHHiaTBRtqbGKuQhgdwBEx5u4HqV5ngn1AZKsDgDeU%3D&reserved=0
+proceedings_venue: IEEE Xplore
+
 ---
 <blockquote class="z-depth-1" style="text-align: left;">
   <p style="padding: 1rem;">
