--- a/_editions/6-virtual-20.html
+++ b/_editions/6-virtual-20.html
@@ -20,11 +20,17 @@ submission_deadline_extended: 2020-11-01
 submission_acceptance: 2020-11-09
 submission_acceptance_extended: 2020-11-16
 
+has_proceedings: False
+
+on_youtube: True
+youtube_url: https://www.youtube.com/channel/UCTwsyUtTOJg-vADmOmbczhw
+
 <! -- submission_acceptance_extended: 2019-10-01 -->
 submission_camera_ready: 2020-11-23
 has_emcc_submission: True
 emcc_submission_deadline: 2020-11-15
 emcc_registration_deadline: 2019-11-08
+
 ---
 <!--
 <blockquote class="z-depth-1" style="text-align: left;">
