--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -21,6 +21,11 @@ submission_camera_ready: 2021-08-28
 has_emcc_submission: True
 emcc_submission_deadline: 2021-07-15
 emcc_registration_deadline: 2019-11-08
+sponsors:
+- name: d-Matrix
+  url: d-matrix.ai
+  logo: dmatrix.svg
+
 ---
 <!--
 <blockquote class="z-depth-1" style="text-align: left;">
