--- a/program-committee.html
+++ b/program-committee.html
@@ -33,7 +33,7 @@ reviewers:
     - name: Tijmen Blankevoort
       affiliation: Qualcomm
     - name: Sikandar Mashayak
-      affiliation: Wave Computing Inc.
+      affiliation: Apple
     - name: Jain Karishma
       affiliation: Intel
     - name: He Xiao
