pushed 7th edition to archive

--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -8,7 +8,7 @@ event_date: 2021-08-28
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
 event_session: full
-is_upcoming: True
+is_upcoming: False
 is_online: True
 is_accepting_submission: False
 is_registering: True 
