Revert "7th edition is now complete!"
This reverts commit f67ed29a8577120c73d5839dba9b76d1d064f7ae.

--- a/_editions/7-virtual-21.html
+++ b/_editions/7-virtual-21.html
@@ -8,11 +8,11 @@ event_date: 2021-08-28
 event_location: Virtual (from San Jose, California)
 event_room: Virtual
 event_session: full
-is_upcoming: False
+is_upcoming: True
 is_online: True
 is_accepting_submission: False
-is_registering: False 
-show_on_submission_page: False
+is_registering: True 
+show_on_submission_page: True
 show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc23
 submission_deadline: 2021-07-31
