--- a/sponsors.html
+++ b/sponsors.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: /sponsors
-show_note: True
+show_note: False
 ---
 {% assign accepting_editions = site.editions|where: "is_accepting_submission",true|sort:"event_date" %}
 {% assign upcoming_editions = site.editions|where: "show_on_submission_page",true|sort:"event_date" %}
