--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -7,10 +7,13 @@ colocated_url: https://aaai.org/Conferences/AAAI-23/
 event_date: 2023-02-13
 event_location: Washington DC, USA
 is_upcoming: True 
-is_accepting_submission: False
-show_on_submission_page: False
+is_accepting_submission: True
+show_on_submission_page: True 
 show_program_summary: False
-
+submission_url: https://easychair.org/conferences/?conf=emc24
+submission_deadline: 2022-11-07
+submission_camera_ready: 2022-12-19
+submission_acceptance: 2022-11-18
 has_proceedings: False 
-
+has_emcc_submission: False 
 ---
