--- a/sponsors.html
+++ b/sponsors.html
@@ -20,7 +20,7 @@ show_note: False
 <br>
 <br>
 -->
-<li>For sponsorship queries, please contact Raj Parihar (<i>rparihar at d-matrix dot ai</i>) and/or Kushal Datta (<i>kushal dot datta at gmail dot com</i>)
+<li>For sponsorship queries, please contact Raj Parihar (<i>parihar at fb dot com</i>) and/or Kushal Datta (<i>kushal dot datta at gmail dot com</i>)
 {% if page.show_note %}
     {% include submission-notes.html %}
 {% endif %}
