--- a/program-committee.html
+++ b/program-committee.html
@@ -2,40 +2,23 @@
 layout: default
 permalink: /program-committee
 reviewers:
-    - name: Sikandar Mashayak
-      affiliation: Apple
-    - name: Jain Karishma
-      affiliation: Intel
-    - name: He Xiao
-      affiliation: Cadence
-    - name: Wei	Wang
-      affiliation: Amazon
-    - name: Tushar Krishna
-      affiliation: Georgia Institute of Technology
-    - name: Nader Sehatbakhsh
-      affiliation: Georgia Institute of Technology
-    - name: Balajee	Vamanan
-      affiliation: University of Illinois at Chicago
-    - name: Xia	Lu
-      affiliation: Amazon
-    - name: Rahmani	Mariam
-      affiliation: Intel
-    - name:  Keshari Rishabh
-      affiliation: Intel
-    - name: Kushal	Datta
-      affiliation: Nvidia
-    - name:  Andre Xian	Ming Chang
-      affiliation: Purdue University
-    - name: Ananya Pareek
-      affiliation: Apple
-    - name: Nitin Garegrat
+    - name: Raj Parihar
+      affiliation: Meta
+    - name: Fanny Nina Paravecino
       affiliation: Microsoft
-    - name: Sylvain Flamant
-      affiliation: Wave computing
-    - name: Raj Jain
-      affiliation: Washington University
-    - name: Smruti Sarangi
-      affiliation: IIT Delhi
+    - name: Satyam Srivastava
+      affiliation: D-Matrix
+    - name: Tao (Terry) Sheng
+      affiliation: Oracle
+    - name: Kushal Datta
+      affiliation: Nvidia
+    - name: Sushant Kondguli
+      affiliation: Meta
+    - name: Michael Goldfarb
+      affiliation: Waymo
+    - name: Prerana Maslekar
+      affiliation: Microsoft
+
 
 ---
 <!--
