--- a/program-committee.html
+++ b/program-committee.html
@@ -12,6 +12,8 @@ reviewers:
       affiliation: Oracle
     - name: Kushal Datta
       affiliation: Nvidia
+    - name: Ananya Pareek
+      affiliation: Apple
     - name: Sushant Kondguli
       affiliation: Meta
     - name: Michael Goldfarb
