--- a/sponsors.html
+++ b/sponsors.html
@@ -5,12 +5,13 @@ show_note: False
 ---
 {% assign accepting_editions = site.editions|where: "is_accepting_submission",true|sort:"event_date" %}
 {% assign upcoming_editions = site.editions|where: "show_on_submission_page",true|sort:"event_date" %}
-<h3 class="header">8th Edition EMCC Gold Sponsor:</h3>
+<!--
+<h3 class="header">7th Edition EMCC is sponsored by</h3>
 <table>
     <tr>
         <td><i>d-Matrix</i> is building one of the most disruptive computing platforms for AI in cloud and edge pioneering in-memory computing in the data-center</td>
         <td>
-            <img src="assets/images/sponsors/dmatrix.svg"
+            <img src="assets/images/sponsors/dmatrix.jpg"
                  class="z-depth-1 valign-wrapper" />
         </td>
     </tr>
@@ -18,7 +19,8 @@ show_note: False
 
 <br>
 <br>
-<li>For sponsorship queries, please contact Raj Parihar (<i>rparihar at fb dot com</i>) and/or Kushal Datta (<i>kushal dot datta at gmail dot com</i>)
+-->
+<li>For sponsorship queries, please contact Raj Parihar (<i>rparihar at d-matrix dot ai</i>) and/or Kushal Datta (<i>kushal dot datta at gmail dot com</i>)
 {% if page.show_note %}
     {% include submission-notes.html %}
 {% endif %}
