--- a/sponsors.html
+++ b/sponsors.html
@@ -11,7 +11,7 @@ show_note: False
     <tr>
         <td><i>d-Matrix</i> is building one of the most disruptive computing platforms for AI in cloud and edge pioneering in-memory computing in the data-center</td>
         <td>
-            <img src="assets/images/sponsors/dmatrix.jpg"
+            <img src="assets/images/sponsors/dmatrix.png"
                  class="z-depth-1 valign-wrapper" />
         </td>
     </tr>
