--- a/submission.html
+++ b/submission.html
@@ -125,7 +125,7 @@ show_note: True
             </ul>
         {% if accepting_editions.size > 0 %}
         <br /><br />
-        <p><strong>​All papers will be submitted, reviewed, and notified through the EasyChair conference management
+        <p><strong>​(NOTE: Submission link is down currently, and we will notify via email when it's ready). All papers will be submitted, reviewed, and notified through the EasyChair conference management
                 service. Please
                 visit the link below to proceed with the submission.</strong></p>
         <div class="center-align">
