--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -7,9 +7,9 @@ colocated_url: https://aaai.org/Conferences/AAAI-23/
 event_date: 2023-02-14
 event_location: Washington DC, USA
 is_upcoming: True 
-is_accepting_submission: True
+is_accepting_submission: False
 show_on_submission_page: True 
-show_program_summary: False
+show_program_summary: True
 submission_url: https://easychair.org/conferences/?conf=emc24
 submission_deadline: 2022-11-21
 submission_camera_ready: 2023-01-07
