--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -8,6 +8,7 @@ event_date: 2023-02-14
 event_location: Washington DC, USA
 is_upcoming: True 
 is_accepting_submission: False
+is_registering: True 
 show_on_submission_page: True 
 show_program_summary: True
 submission_url: https://easychair.org/conferences/?conf=emc24
