--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -5,6 +5,7 @@ colocated_short: AAAI 2023
 colocated_long: The 37th AAAI Conference on Artificial Intelligence
 colocated_url: https://aaai.org/Conferences/AAAI-23/ 
 event_date: 2023-02-14
+event_room: 146A
 event_location: Washington DC, USA
 is_upcoming: True 
 is_accepting_submission: False
