--- a/8-aaai-23.html
+++ b/8-aaai-23.html
@@ -6,6 +6,7 @@ colocated_long: The 37th AAAI Conference on Artificial Intelligence
 colocated_url: https://aaai.org/Conferences/AAAI-23/ 
 event_date: 2023-02-14
 event_location: Washington DC, USA
+event_room: 146A
 is_upcoming: True 
 is_accepting_submission: False
 is_registering: True 
