--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -6,6 +6,7 @@ colocated_long: The 37th AAAI Conference on Artificial Intelligence
 colocated_url: https://aaai.org/Conferences/AAAI-23/ 
 event_date: 2023-02-14
 event_room: 146A
+online_link: https://underline.io/events/390/sessions?eventSessionId=14191
 event_location: Washington DC, USA
 is_upcoming: True 
 is_accepting_submission: False
