--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -6,7 +6,7 @@ colocated_long: The 37th AAAI Conference on Artificial Intelligence
 colocated_url: https://aaai.org/Conferences/AAAI-23/ 
 event_date: 2023-02-14
 event_room: 146A
-online_link: https://underline.io/events/390/sessions?eventSessionId=14191
+online_link: https://drive.google.com/drive/folders/1WBc8AP807QgAQxxhtIaDX-Ra2yzg9Twq?usp=sharing
 event_location: Washington DC, USA
 is_upcoming: True 
 is_accepting_submission: False
