Update 8-aaai-23.html past edition - True

--- a/_editions/8-aaai-23.html
+++ b/_editions/8-aaai-23.html
@@ -8,11 +8,11 @@ event_date: 2023-02-14
 event_room: 146A
 online_link: https://drive.google.com/drive/folders/1WBc8AP807QgAQxxhtIaDX-Ra2yzg9Twq?usp=sharing
 event_location: Washington DC, USA
-is_upcoming: True 
+is_upcoming: False 
 is_accepting_submission: False
-is_registering: True 
-show_on_submission_page: True 
-show_program_summary: True
+is_registering: False 
+show_on_submission_page: False 
+show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc24
 submission_deadline: 2022-11-21
 submission_camera_ready: 2023-01-07
