--- a/9-asplos-24.html
+++ b/9-asplos-24.html
@@ -7,8 +7,9 @@ colocated_url: https://www.asplos-conference.org/asplos2024/
 event_date: 2024-04-27
 event_location: San Diego, CA, USA
 is_upcoming: True 
-is_accepting_submission: False
+is_accepting_submission: True
+submission_url: https://easychair.org/my/conference?conf=emc25
 is_registering: False 
-show_on_submission_page: False 
+show_on_submission_page: True 
 show_program_summary: False
 ---
