--- a/9-asplos-24.html
+++ b/9-asplos-24.html
@@ -12,4 +12,7 @@ submission_url: https://easychair.org/my/conference?conf=emc25
 is_registering: False 
 show_on_submission_page: True 
 show_program_summary: False
+submission_deadline: 2024-04-01
+submission_camera_ready: 2024-04-01
+submission_acceptance: 2024-04-01
 ---
