--- a/sponsors.html
+++ b/sponsors.html
@@ -22,7 +22,7 @@ show_note: False
 <br>
 -->
 
-<li>For sponsorship queries, please contact Raj Parihar (<i>rparihar at d-matrix dot ai</i>) and/or Kushal Datta (<i>kushal dot datta at gmail dot com</i>)
+<li>For sponsorship queries, please contact Raj Parihar (<i>parihar at meta dot com</i>) and/or Satyam Srivastava (<i>ssrivastava at d-matrix dot ai</i>)
 {% if page.show_note %}
     {% include submission-notes.html %}
 {% endif %}
