--- a/program-committee.html
+++ b/program-committee.html
@@ -8,20 +8,28 @@ reviewers:
       affiliation: Microsoft
     - name: Satyam Srivastava
       affiliation: D-Matrix
-    - name: Tao (Terry) Sheng
-      affiliation: Oracle
-    - name: Kushal Datta
-      affiliation: Nvidia
+    - name: Michael Huang
+      affiliation: University of Rochester
+    - name: Suchita Pati
+      affiliation: University of Wisconsin-Madison
     - name: Ananya Pareek
-      affiliation: Apple
+      affiliation: Google
     - name: Sushant Kondguli
       affiliation: Meta
-    - name: Michael Goldfarb
-      affiliation: Waymo
-    - name: Prerana Maslekar
-      affiliation: Microsoft
-
-
+    - name: Prashant Nair
+      affiliation: University of British Columbia
+    - name: Rutwik Jain
+      affiliation: University of Wisconsin-Madison
+    - name: Eric Qin
+      affiliation: Meta
+    - name: Abhishek Singh
+      affiliation: Samsung
+    - name: José Cano
+      affiliation: University of Glasgow
+    - name: Muhammad Adnan
+      affiliation: University of British Columbia
+    - name: Gaurav Jain
+      affiliation: D-Matrix
 ---
 <!--
 <h3 class="header">Program Committee</h3>
