--- a/_editions/9-asplos-24.html
+++ b/_editions/9-asplos-24.html
@@ -5,6 +5,7 @@ colocated_short: ASPLOS 2024
 colocated_long: The ACM International Conference on Architectural Support for Programming Languages and Operating Systems
 colocated_url: https://www.asplos-conference.org/asplos2024/ 
 event_date: 2024-04-27
+event_room: Grande B
 event_location: San Diego, CA, USA
 is_upcoming: True 
 is_accepting_submission: False
