--- a/_editions/9-asplos-24.html
+++ b/_editions/9-asplos-24.html
@@ -10,6 +10,8 @@ event_location: San Diego, CA, USA
 is_upcoming: True 
 is_accepting_submission: False
 submission_url: https://easychair.org/my/conference?conf=emc25
+online_link: https://drive.google.com/drive/folders/1rGVbdguMtV5ZvNdekpkCyRw6UVIQV8bx?usp=sharing
+webinar_link: https://events.teams.microsoft.com/event/4b58e9ce-e4ee-48fd-a071-b3570aff665b@656d4e6f-3fcf-4ab1-80d1-71331c6f3ce6
 is_registering: False 
 show_on_submission_page: True 
 show_program_summary: False
